UF-7047: Implement CRUD for MandateTemplates
