# src/integration-test/resources/openapi.yaml
@@ -1,15 +1,206 @@
 openapi: 3.0.1
 info:
   title: api-myrepresentatives
-  contact: {}
+  contact: { }
   license:
     name: MIT License
     url: https://opensource.org/licenses/MIT
   version: "2.0"
 servers:
-  - url: http://localhost:52854
+  - url: http://localhost:64398
     description: Generated server url
+tags:
+  - name: Mandate Templates
+    description: Resources for managing mandate templates
 paths:
+  /mandates/templates/{id}:
+    get:
+      tags:
+        - Mandate Templates
+      description: Get a mandate template by id
+      operationId: getMandateTemplate
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK - Successful operation
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/MandateTemplate'
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Problem'
+                  - $ref: '#/components/schemas/ConstraintViolationProblem'
+    put:
+      tags:
+        - Mandate Templates
+      description: Update Mandate Template
+      operationId: updateMandateTemplate
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MandateTemplate'
+        required: true
+      responses:
+        "204":
+          description: No Content - Successful operation
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Problem'
+                  - $ref: '#/components/schemas/ConstraintViolationProblem'
+    delete:
+      tags:
+        - Mandate Templates
+      description: Delete Mandate Template
+      operationId: deleteMandateTemplate
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "204":
+          description: No Content - Successful operation
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Problem'
+                  - $ref: '#/components/schemas/ConstraintViolationProblem'
+  /mandates/templates:
+    get:
+      tags:
+        - Mandate Templates
+      description: Get all mandate templates
+      operationId: getAllMandateTemplates
+      responses:
+        "200":
+          description: OK - Successful operation
+          content:
+            '*/*':
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/MandateTemplate'
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Problem'
+                  - $ref: '#/components/schemas/ConstraintViolationProblem'
+    post:
+      tags:
+        - Mandate Templates
+      description: Create Mandate Template
+      operationId: createMandateTemplate
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/MandateTemplate'
+        required: true
+      responses:
+        "201":
+          description: Created - Successful operation
+          headers:
+            Location:
+              description: Location of the created resource.
+              style: simple
+              schema:
+                type: string
+        "404":
+          description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "400":
+          description: Bad request
+          content:
+            application/problem+json:
+              schema:
+                oneOf:
+                  - $ref: '#/components/schemas/Problem'
+                  - $ref: '#/components/schemas/ConstraintViolationProblem'
   /mandates:
     get:
       tags:
@@ -99,6 +290,12 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad request
           content:
@@ -113,12 +310,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/MandatesResponse'
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
   /jwks:
     get:
       tags:
@@ -127,6 +318,12 @@ paths:
       responses:
         "404":
           description: Not Found
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
           content:
             application/problem+json:
               schema:
@@ -145,12 +342,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Jwks'
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
       x-auth-type: None
       x-throttling-tier: Unlimited
       x-wso2-mutual-ssl: Optional
@@ -232,6 +423,12 @@ paths:
             application/problem+json:
               schema:
                 $ref: '#/components/schemas/Problem'
+        "500":
+          description: Internal Server Error
+          content:
+            application/problem+json:
+              schema:
+                $ref: '#/components/schemas/Problem'
         "400":
           description: Bad request
           content:
@@ -246,12 +443,6 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/AuthoritiesResponse'
-        "500":
-          description: Internal Server Error
-          content:
-            application/problem+json:
-              schema:
-                $ref: '#/components/schemas/Problem'
   /api-docs:
     get:
       tags:
@@ -270,6 +461,28 @@ paths:
       x-wso2-mutual-ssl: Optional
 components:
   schemas:
+    MandateTemplate:
+      type: object
+      properties:
+        code:
+          type: string
+          description: Code for the specific template
+          example: bf1a690b-33d6-4a3e-b407-e7346fa1c97c
+        title:
+          type: string
+          description: Title for the specific template
+          example: Fullmakt för att göra och hantera anmälan
+        description:
+          type: string
+          description: Description for the specific template
+          example: "Behörigheten ger fullmaktshavaren rätt att upprätta anmälan, ta\
+            \ del av eget utrymme och ändra uppgifter gällande åtgärden samt på annat\
+            \ sätt företräda byggherren i åtgärder enligt 6 kap. 5 § plan- och byggfö\
+            rordningen (2011:338). Behörigheten omfattar även rätt att upprätta, se\
+            \ och ändra uppgifter gällande start- och slutbesked enligt 10 kap. 3\
+            \ och 4 §§ plan- och bygglagen (2010:900)."
+      description: "Base information for the issuer of mandates / authorities if provided,\
+        \ 'partyId' and 'type' must be set."
     Problem:
       type: object
       properties:
@@ -283,20 +496,20 @@ components:
           type: object
           additionalProperties:
             type: object
+        status:
+          $ref: '#/components/schemas/StatusType'
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: '#/components/schemas/StatusType'
     StatusType:
       type: object
       properties:
+        reasonPhrase:
+          type: string
         statusCode:
           type: integer
           format: int32
-        reasonPhrase:
-          type: string
     ConstraintViolationProblem:
       type: object
       properties:
@@ -418,12 +631,12 @@ components:
           type: object
           additionalProperties:
             type: object
+        status:
+          $ref: '#/components/schemas/StatusType'
         title:
           type: string
         detail:
           type: string
-        status:
-          $ref: '#/components/schemas/StatusType'
         suppressed:
           type: array
           items:
@@ -657,4 +870,4 @@ components:
           description: Date to when the authority ceased to be valid
           format: date
       description: Authority information model.
-  securitySchemes: {}
+  securitySchemes: { }
