# src/main/java/se/sundsvall/myrepresentative/service/mandates/MandatesResponseMapper.java
@@ -12,6 +12,7 @@ import se.sundsvall.myrepresentative.api.model.Role;
 import se.sundsvall.myrepresentative.api.model.mandates.Mandate;
 import se.sundsvall.myrepresentative.api.model.mandates.Mandate.Permission;
 import se.sundsvall.myrepresentative.api.model.mandates.MandatesResponse;
+import se.sundsvall.myrepresentative.service.mandatetemplate.MandateTemplateService;
 
 import generated.se.sundsvall.minaombud.Fullmaktshavare;
 import generated.se.sundsvall.minaombud.HamtaBehorigheterResponse;
@@ -20,51 +21,58 @@ import generated.se.sundsvall.minaombud.UtdeladBehorighet;
 @Component
 public class MandatesResponseMapper {
 
-    public MandatesResponse mapFullmakterResponse(final HamtaBehorigheterResponse behorigheterResponse) {
-        return MandatesResponse.builder()
-                .withMandates(behorigheterResponse.getKontext().stream()
-                        .filter(Objects::nonNull)
-                        .map(kontext -> Mandate.builder()
-	                        .withMandateIssuer(ResponseIssuer.builder()
-		                        .withLegalId(kontext.getFullmaktsgivare().getId())
-		                        .withType(kontext.getFullmaktsgivare().getTyp())
-		                        .withName(kontext.getFullmaktsgivare().getNamn())
-		                        .build())
-	                        .withMandateAcquirers(kontext.getFullmaktshavare().stream()
-		                        .map(singleAcquirer -> ResponseAcquirer.builder()
-			                        .withLegalId(singleAcquirer.getId())
-			                        .withType(singleAcquirer.getTyp())
-			                        .withName(mapMandateAcquirerName(singleAcquirer))
-			                        .build())
-		                        .toList())
-	                        .withPermissions( kontext.getBehorigheter().stream()
-		                        .collect(Collectors.groupingBy(
-			                        UtdeladBehorighet::getFullmakt,
-			                        Collectors.mapping(
-				                        behorighet -> Permission.builder()
-					                        .withCode(behorighet.getKod()).build(),
-				                        Collectors.toList())
-		                        )))
-	                        .withIssuedDate(kontext.getTidpunkt().toLocalDateTime())
-	                        .withMandateRole(Role.fromBolagsverketValue(kontext.getFullmaktsgivarroll().toString()))
-	                        .build())
-                        .toList())
-                .withMetaData(MetaData.builder()
-                        .withPage(behorigheterResponse.getPage().getNumber())
-                        .withTotalPages(behorigheterResponse.getPage().getTotalPages().intValue())
-                        .withTotalRecords(behorigheterResponse.getPage().getTotalElements().intValue())
-                        .withLimit(behorigheterResponse.getPage().getSize())
-                        .build())
-                .build();
-    }
+	private final MandateTemplateService service;
 
-    String mapMandateAcquirerName(final Fullmaktshavare fullmaktshavare) {
-        final String name;
-        if(fullmaktshavare.getTyp().equals("orgnr")) {
-            name = fullmaktshavare.getNamn();
-        } else {
-            name = fullmaktshavare.getFornamn() + " " + fullmaktshavare.getNamn();
-        }
-        return name;
-    }
+	public MandatesResponseMapper(final MandateTemplateService service) {this.service = service;}
+
+	public MandatesResponse mapFullmakterResponse(final HamtaBehorigheterResponse behorigheterResponse) {
+		return MandatesResponse.builder()
+			.withMandates(behorigheterResponse.getKontext().stream()
+				.filter(Objects::nonNull)
+				.map(kontext -> Mandate.builder()
+					.withMandateIssuer(ResponseIssuer.builder()
+						.withLegalId(kontext.getFullmaktsgivare().getId())
+						.withType(kontext.getFullmaktsgivare().getTyp())
+						.withName(kontext.getFullmaktsgivare().getNamn())
+						.build())
+					.withMandateAcquirers(kontext.getFullmaktshavare().stream()
+						.map(singleAcquirer -> ResponseAcquirer.builder()
+							.withLegalId(singleAcquirer.getId())
+							.withType(singleAcquirer.getTyp())
+							.withName(mapMandateAcquirerName(singleAcquirer))
+							.build())
+						.toList())
+					.withPermissions(kontext.getBehorigheter().stream()
+						.collect(Collectors.groupingBy(
+							UtdeladBehorighet::getFullmakt,
+							Collectors.mapping(
+								behorighet -> Permission.builder()
+									.withCode(behorighet.getKod())
+									.withDescription(service.getDescriptionForTemplate(behorighet.getKod()))
+									.build(),
+								Collectors.toList())
+						)))
+					.withIssuedDate(kontext.getTidpunkt().toLocalDateTime())
+					.withMandateRole(Role.fromBolagsverketValue(kontext.getFullmaktsgivarroll().toString()))
+					.build())
+				.toList())
+			.withMetaData(MetaData.builder()
+				.withPage(behorigheterResponse.getPage().getNumber())
+				.withTotalPages(behorigheterResponse.getPage().getTotalPages().intValue())
+				.withTotalRecords(behorigheterResponse.getPage().getTotalElements().intValue())
+				.withLimit(behorigheterResponse.getPage().getSize())
+				.build())
+			.build();
+	}
+
+	String mapMandateAcquirerName(final Fullmaktshavare fullmaktshavare) {
+		final String name;
+		if (fullmaktshavare.getTyp().equals("orgnr")) {
+			name = fullmaktshavare.getNamn();
+		} else {
+			name = fullmaktshavare.getFornamn() + " " + fullmaktshavare.getNamn();
+		}
+		return name;
+	}
+
 }
